--- a/custom-style-hooks/package.json
+++ b/custom-style-hooks/package.json
@@ -10,14 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "@fluentui/react": "^8.0.0"
+    "@fluentui/react": "^8.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "@types/react": "^16.8",
-    "@types/react-dom": "^16.8",
+    "@types/react": "^18.0",
+    "@types/react-dom": "^18.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
