--- a/custom-style-hooks/package.json
+++ b/custom-style-hooks/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fluentui/react": "^8.0.0",
+    "@fluentui/react-components": "^9.60.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
